--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,5 +21,5 @@ jobs:
   
       - name: Build with Maven
         run: |
-          mvnw clean package
+          mvn -B clean package
           echo 'Build completed'
