--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,24 +2,11 @@ name: build and test pipeline
 on:
   push:
     branches:
-      - feature/*
+    - feature/*
+  pull_request:
+    branches:
+    - main
 
 jobs:
-  build-feature:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.2
-      - name: Checkout from git repository
-        run: git checkout ${{ github.ref }}
-  
-  
-      - name: Setup java 21
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-  
-      - name: Build with Maven
-        run: |
-          mvn -B clean package
-          echo 'Build completed'
+  call-workflow-passing-data:
+    uses: faperezm/workflow-templates/.github/workflows/generic.yml@052917e985304d4790d75760f26a464cf05725e0
