--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,4 +9,5 @@ on:
 
 jobs:
   call-workflow-passing-data:
-    uses: faperezm/workflow-templates/.github/workflows/generic.yaml@052917e985304d4790d75760f26a464cf05725e0
+    uses: faperezm/workflow-templates/.github/workflows/generic.yaml@0main
+    #uses: faperezm/workflow-templates/.github/workflows/generic.yaml@052917e985304d4790d75760f26a464cf05725e0
