update generic pipeline

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -11,3 +11,5 @@ jobs:
   call-workflow-passing-data:
     uses: faperezm/workflow-templates/.github/workflows/generic.yaml@42c19631f43444959f4cae6f074ef68e3273ea0f
     #uses: faperezm/workflow-templates/.github/workflows/generic.yaml@052917e985304d4790d75760f26a464cf05725e0
+    with:
+      description: ${{ github.event_name == 'pull_request' }}
