--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -12,4 +12,4 @@ jobs:
     uses: faperezm/workflow-templates/.github/workflows/generic.yaml@main
     #uses: faperezm/workflow-templates/.github/workflows/generic.yaml@052917e985304d4790d75760f26a464cf05725e0
     with:
-      description: ${{ github.event_name == 'pull_request' }}
+      inputs: ${{ github.event_name == 'pull_request' }}
