--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,5 +8,8 @@ on:
     - main
 
 jobs:
-  call-workflow-passing-data:
-    uses: faperezm/workflow-templates/.github/workflow/generic.yml@052917e985304d4790d75760f26a464cf05725e0
+  continuous_integration:
+    uses: faperezm/workflow-templates/.github/workflows/generic.yaml@main
+    #uses: faperezm/workflow-templates/.github/workflows/generic.yaml@052917e985304d4790d75760f26a464cf05725e0
+    with:
+      inputs: ${{ github.event_name == 'pull_request' }}
