pre commit hook

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,24 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>no.oms.maven</groupId>
+				<artifactId>pre-commit-maven-plugin</artifactId>
+				<version>LATEST_VERSION</version>
+				<inherited>false</inherited>
+				<configuration>
+					<!-- The version of pre-commit you would like to use -->
+					<precommitVersion>v1.10.1</precommitVersion>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>download-binary</goal>
+							<goal>generate-hooks</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
@@ -64,3 +82,5 @@
 	</build>
 
 </project>
+
+
